--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 
   <link rel="stylesheet" href="/app/bootstrap/css/bootstrap.css" />
-  <link rel="stylesheet" href="/app/swiper/swiper-bundle.min./css" />
-  <link rel="stylesheet" href="/app/dist/app.css" />
+  <link rel="stylesheet" href="/app/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="/app/scss/app.css" />
   <link rel="stylesheet" href="/assets/font/risebot.css" />
   <link rel="stylesheet" href="/assets/font/font-awesome.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="home3"></div>
   <script type="module" src="/src/main.jsx"></script>
 
   <style>
@@ -29,6 +29,7 @@
       display: inline-block;
       color: white;
       font-weight: bold;
+      font-size: 26px;
     }
 
     .marker-text::before {
@@ -70,6 +71,7 @@
   <script src="/app/js/plugin.js"></script>
   <script src="/app/js/count-down.js"></script>
   <script src="/app/js/countto.js"></script>
+  <script src="https://kit.fontawesome.com/2c3f853d3a.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
